Add fantasy theme using RPG UI

--- a/src/app.html
+++ b/src/app.html
@@ -5,9 +5,17 @@
 		<meta name="description" content="Gather your party with Svelte" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- Allows svelte to preload this font before RPG GUI imports it -->
+		<link
+			href="https://fonts.googleapis.com/css?family=Press+Start+2P"
+			rel="stylesheet"
+			type="text/css"
+		/>
+
 		%svelte.head%
 	</head>
-	<body>
+	<body class="rpgui-content">
 		<div id="svelte">%svelte.body%</div>
 	</body>
 </html>
