--- a/src/app.html
+++ b/src/app.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="Gather your Party with Svelte" />
-		<link rel="icon" href="/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
 
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 
 	<body class="rpgui-content">
-		<div id="svelte">%svelte.body%</div>
+		<div id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
